--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -39,6 +39,7 @@ nlu:
     - of course
     - that sounds good
     - correct
+    - yep
 
 - intent: deny
   examples: |
@@ -49,40 +50,25 @@ nlu:
     - don't like that
     - no way
     - not really
+    - nah
 
 - intent: mood_great
   examples: |
-    - perfect
-    - great
-    - amazing
-    - feeling like a king
-    - wonderful
-    - I am feeling very good
-    - I am great
-    - I am amazing
-    - I am going to save the world
-    - super stoked
-    - extremely good
-    - so so perfect
-    - so good
-    - so perfect
+    - pretty wonderful today
+    - \bperfect\b
+    - \bgood\b
+    - \bawesome\b
+
 
 - intent: mood_unhappy
   examples: |
-    - my day was horrible
-    - I am sad
-    - I don't feel very well
-    - I am disappointed
-    - super sad
-    - I'm so sad
-    - sad
-    - very sad
+    - \bhorrible\b
+    - don't feel very well
+    - \bsad\b
     - unhappy
     - not good
     - not very good
-    - extremly sad
-    - so saad
-    - so sad
+
 
 - intent: bot_challenge
   examples: |
