--- a/data/stories.yml
+++ b/data/stories.yml
@@ -13,35 +13,5 @@ stories:
   steps:
     - intent: greet
     - action: utter_greet
-    - intent: mood_great
+    - intent: mood_unhappy
     - action: utter_cheer_up
-
-# - story: happy path
-#   steps:
-#   - intent: greet
-#   - action: utter_greet
-#   - intent: mood_unhappy
-#   - action: utter_happy
-#   - action: utter_greet
-
-# - story: sad path 1
-#   steps:
-#   - intent: greet
-#   - action: utter_greet
-#   - intent: mood_unhappy
-#   - action: utter_cheer_up
-#   - action: utter_did_that_help
-#   - intent: affirm
-#   - action: utter_happy
-#   - action: utter_greet
-
-# - story: sad path 2
-#   steps:
-#   - intent: greet
-#   - action: utter_greet
-#   - intent: mood_unhappy
-#   - action: utter_cheer_up
-#   - action: utter_did_that_help
-#   - intent: deny
-#   - action: utter_goodbye
-#   - action: utter_greet
